--- a/kalkulator/MainPage.xaml
+++ b/kalkulator/MainPage.xaml
@@ -11,7 +11,7 @@
         <Button Text="C" Grid.Row="2" Grid.Column="0" Clicked="OnClear" Margin="5,20,5,0" BackgroundColor="Red"/>
         <Button Text="W produkcji" Grid.Row="2" Grid.Column="1" Clicked="OnClear" Margin="5,20,5,0" BackgroundColor="Red"/>
 
-        <Button Text="." Clicked="OnWybranaLiczba" Grid.Row="2" Grid.Column="2"  Margin="5,20,5,0"/>
+        <Button Text="," Clicked="OnWybranaLiczba" Grid.Row="2" Grid.Column="2"  Margin="5,20,5,0"/>
         <Button Text="7" Clicked="OnWybranaLiczba" Grid.Row="3" Grid.Column="0" Margin="5,20,5,0"/>
         <Button Text="8" Clicked="OnWybranaLiczba" Grid.Row="3" Grid.Column="1" Margin="5,20,5,0"/>
         <Button Text="9" Clicked="OnWybranaLiczba" Grid.Row="3" Grid.Column="2" Margin="5,20,5,0"/>
